--- a/stick.tt
+++ b/stick.tt
@@ -7,29 +7,44 @@
 /session $myname fy.sysfon.com 6000
 /nop session $myname fy.hbisp.com 3333
 /read comm/login.sc
-/var hasstaff 0
-/var hashand 0
-/al wistaff {/if {$hasstaff==0}{do unwield all,wield staff}}
-/al wistaff {/if {$hasblade==0||$hashand==1}{do unwield all,wield blade2,wield zhufu blade}}
-/al wistaff {/if {$hasblade==0||$hashand==1}{do unwield all,wield blade2,wield zhufu sword}}
-/al wihand {/if {$hashand==0}{do unwield all,wield jade}}
-/al wiw wistaff
-/var hasblade 0
+/var staff 0
+/var hand 0
+/var blade 0
+/var blade2 0
 /var hasfushou 0
-/al isblade {/var hasblade 1;/var hasanqi 0;/var hashand 0;/showme isblade;enable parry shilin-jian}
-/al noblade {/var hasblade 0; /showme noblade;}
+/var sword 0
+/al wistaff {/if {$staff==0||$hand==1||$blade==1||$sword==1}{do unwield all,wield zhang}}
+/al wisword {/if {$sword==0||$hand==1||$blade==1||$staff==1}{do unwield all,wield zhufu sword,wield blade2}}
+/al wiblade {/if {$blade==0||$hand==1||$sword==1||$staff==1}{do unwield all,wield zhufu blade,wield blade2}}
+/al wihand {/if {$hand==0||$blade==1||$staff==1||$sword==1}{do unwield all,wield jade}}
+/al wiw wistaff
+/al isblade {/var blade 1;/var staff 0;/var sword 0;/var hand 0;/showme isblade;enable parry ittouryu}
+/al noblade {/var blade 0; /showme noblade;}
+/al ishand {/var hand 1;/var staff 0;/var sword 0;/var blade2 0;/var blade 0;/showme ishand;enable parry dragonstrike}
+/al nohand {/var hand 0; /showme nohand;}
+/al issword {/var sword 1;/var staff 0;/var blade 0;/var hand 0;/showme issword;enable parry ittouryu}
+/al nosword {/var sword 0; /showme nosword;}
+/al isblade2 {/var blade2 1;/var staff 0;/var sword 0;/var hand 0;/showme isblade2;enable parry ittouryu}
+/al noblade2 {/var blade2 0; /showme noblade2;}
+/al isstaff {/var staff 1;/var blade 0;/var sword 0;/var blade2 0;/var hand 0;/showme isstaff;enable parry dagou-stick}
+/al nostaff {/var staff 0; /showme nostaff;}
 /ac {^你放下手中的神之祝福宝刀}{noblade}
-/ac {^你放下手中的神之祝福宝剑}{noblade}
 /ac {^你装备神之祝福宝刀作武器}{isblade}
-/ac {^你装备神之祝福宝剑作武器}{isblade}
+/ac {^你装备神之祝福宝剑作武器}{issword}
+/ac {^你放下手中的神之祝福宝剑}{nosword}
 /ac {^  √神之祝福宝刀(zhufu blade)}{isblade}
-/ac {^  √★降龙伏虎★(jade)}{/var hashand 1;/var hasstaff 0} 
-/ac {^你从怀中摸出一对★降龙伏虎★}{/var hashand 1;/var hasstaff 0;enable parry dragonstrike} 
-/ac {^你将手上的★降龙伏虎★藏入}{/var hashand 0} 
-/ac {^    ★降龙伏虎★(jade)}{/var hashand 0} 
-/ac {^你装备神之祝福宝杖}{/var hashand 0;/var hasstaff 1;enable parry dagou-stick} 
-/ac {^  √神之祝福宝杖(zhufu staff)}{/var hasstaff 1;/var hashand 0} 
-/ac {^你放下手中的神之祝福宝杖}{/var hasstaff 0}
+/ac {^  √神之祝福宝剑(zhufu sword)}{issword}
+/ac {^  √★降龙伏虎★(jade)}{ishand} 
+/ac {^你从怀中摸出一对★降龙伏虎★}{ishand} 
+/ac {^你将手上的★降龙伏虎★藏入}{/var hand 0} 
+/ac {^    ★降龙伏虎★(jade)}{/var hand 0} 
+/ac {^你装备神之祝福宝杖}{isstaff} 
+/ac {^  √神之祝福宝杖(zhufu staff)}{isstaff} 
+/ac {^你放下手中的神之祝福宝杖}{nostaff}
+/ac {^  √＊百鬼夜狂＊(blade2)}{isblade2}
+/ac {^    ＊百鬼夜狂＊(blade2)}{noblade2}
+/ac {^你抽出一把明晃晃的＊百鬼夜狂＊}{isblade2}
+/ac {^你放下手中的＊百鬼夜狂＊}{noblade2}
 /al tbuff {/showme todo}
 /al xl {tbuff;wihand;perform xianglongwuhui}
 /al sc {tbuff;wihand;perform shichengliulong}
@@ -49,11 +64,13 @@
 /ac {^奇冷的寒气包围了}{luo;/var haspj 1;/var haspet 1;de4 pk;de4 {/var haspj 0};de5 pj;/showme ============ freeze ===========}
 /ac {^小小棍纵身越到了}{pj}
 /ac {^小小棍一招不慎，露出了好大的一个破绽！！！$}{de4 pj}
+/ac {^你悄悄走到%1背后，飞身纵起}{iskill;gongji $npc}
+/ac {^小小棍不知从哪里窜到你面前}{/if {$is_kill==1}{juji $npc}}
 /al wpet {order wear all}
 /al buff {wh;perform dodge.gouweixudiao}
-/al buff {perform dodge.gouweixudiao}
+/al buff {perform dodge.gouweixudiao;exert douhanjue}
 /al ki {i;set dmg_msg 1;
-        do unwield all,wield zhufu sword,wield blade2;wh;buff;set target %0;/var npc %0;buff;/delay {2}{juji %0;kill %0;gongji %0}}
+        wistaff;buff;set target %0;/var npc %0;buff;/delay {2}{juji %0;kill %0;wh}}
 /ac {^你对著%0！今日不是你死就是我活！} {iskill}
 /nop ------------
 /var xl_max 0
@@ -81,7 +98,7 @@
 /al txwg {tbuff;wistaff;perform staff.tianxiawugou}
 /al zjbl {wihand;perform unarmed.zhenjingbaili}
 /al ps tzj
-/al luo {wistaff;perform sword.luo}
+/al luo {wisword;perform sword.luo}
 /ac {^%1只觉掌风扑面，气息窒滞}{
     iskill;
     /if {"%1"=="你"}{/showme ---npc sc me !!!}{
@@ -126,7 +143,7 @@
 /ac {觑得亲切，不退反进，借势击向你};
 /ac {斜斜滑出三尺，一时间中路空门大开，正是时机}
 }
-/ac {^%0足尖着力，飘身后退。$}{wistaff;pjj;/showme --- sc fail wistaff todo----}
+/ac {^%0足尖着力，飘身后退。$}{wiblade;pjj;/showme --- sc fail wiblade todo----}
 /nop -----------------
 /ac {^你大喝一声，犹似半空响了个霹雳}{}
 /al stopk { set dmg_msg 0; 
@@ -145,7 +162,7 @@
 /ac {^『天下无狗』只能对战}{stopk;cks}
 /ac {^( 你似乎十分疲惫，看来需要好好休息了}{}
 /ac {^( 你头重脚轻，正在勉力支撑著不倒下去)}{}
-/ac {^( 你摇头晃脑、歪歪斜斜，濒于晕倒}{sk}
+/ac {^( 你摇头晃脑、歪歪斜斜，濒于晕倒}{sk;perform dodge.goujitiaoqiang}
 /ac {^( 你已经陷入半昏迷状态，神智全失}{sk}
 /ac {^你所选用的武功中没有这种必杀技。}{get jade;get staff}
 /ac {^使用特殊招式至少需要50点的内力}{hp}
@@ -198,11 +215,235 @@
     }
 /ac {^看起来%0想杀死你！$}{
         look;
-        startk;
-        xixi $petname;
-        /if {$haspet==0}{wh;de2 {gongji $npc;juji $npc;kill $npc}}
+        /nop startk;
+        /nop xixi $petname;
+        /nop if {$haspet==0}{wh;/delay {pet}{gongji $npc;juji $npc;kill $npc}{1.2}}
         }
 /ac {^疗伤时至少需要有最大内力值护体。}{de2 hn}
-/ac {^突然，一蓬鲜血激射}{czj;pk}
+/ac {^突然，一蓬鲜血激射}{luo;pk}
 /ac {^只好任%1落在一边。}{/showme todo }
 /ac {^你只觉得虎口一热，手中的神之祝福宝刀}{noblade}
+/nop work
+/ac {^  【不如归去】 孟婆(Mengpo)}{asksoup;sw;s;wtick}
+/ac {^你所受到的地域幽魂的效用消失了。}{sw;s;dash mist}
+/ac {^忘川台 -}{do nw,s,dash mist}
+/ac {^  (鬼气) 【三世轮回】 玉蕊(Yurui)}{dash mist}
+/al gowork {d;fyz;walk 打铁铺;wtick}
+/al wtick {/ticker {work}{look}{8}}
+/al wtick- {/unticker {work}}
+/al askwork {ask tie jiang about job;}
+/ac {^铁匠说道：%0(%1)}{%1;}
+/ac {^铁匠对你道：这是给你的工钱。}{hpnt;de2 {/if {$peiyao==0}{askwork}{do n,n}}}
+/ac {^  铁匠铺老板 铁匠(Tie jiang)}{askwork}
+/ac {^铁匠说道：让您老干这个未免屈尊了吧？}{do n,n}
+/ac {^平一指说道：就这点经验，连一百五都没有}{do s,s}
+/al askpeiyao {ask ping about job}
+/ac {^  炼药师协会会长「杀人神医」平一指(Ping yizhi)}{askpeiyao}
+/ac {^平一指说道：%0(%1)}{%1;de2 askpeiyao}
+/ac {^平一指说道：让你干的活你干完了么？}{peiyao}
+/ac {^平一指看了你配的药}{hpnt;de2 {;}}
+/var fish 0
+/var peiyao 0
+/var copy 0
+/var caxie 0
+/ac {^【 平 和 】%1【 经 验 】%s%2}{
+    /var ntexp %2;
+    /showme ntexp=$ntexp;
+    /if {$ntexp>10000}{/var peiyao 1};
+    /if {$ntexp>100000}{/var caxie 1};
+    /if {$ntexp>500000 && $fish==0}{
+        /unticker {cx};
+        wtick;
+       de6 gotodie;/delay {12}{hpnt};
+       cxt-;
+    };
+    }
+/ac {^startfish}{
+/5 {drop shoeshine};
+ wtick;
+    cxt-;
+    /var fish 1;
+    /delay {281}{d;fyz;do w,s,e,s,buy diao gan,buy 5000 yu er;};
+    /delay {283}{buyyuer};
+}
+/al gotodie {ffy;
+de1 {do d,w,w,w,w,s,s,kill huang mazi};
+}
+/ac {^startfish}{
+gotodie
+}
+/al gofull {d;w;fyz;de1 {do w,s,e,s,buy sleepbag,sleep sleepbag}} 
+/ac {^你说道：又死了。。。}{gofull;de8 {gowork}}
+/ac {^铁匠说道：你还是歇会儿吧}{gofull;de8 {gowork}}
+/ac {^平一指说道：让你干这活，也太屈就你了吧。}{walk 书院}
+/al askcopy {ask zhu xi about job}
+/ac {^  朱熹(Zhu xi)(LV16)}{askcopy}
+/ac {^朱熹说道：好，你就帮我抄书(%1)}{%1}
+/ac {^朱熹说道：让你抄的书你抄完了？}{copy}
+/ac {^朱熹说道：虽然我这里只是抄抄书}{gowork}
+/ac {^通过这次锻炼，你获得了}{;}
+/ac {^朱熹看了你抄写的书}{hpnt;de1 askcopy}
+/ac {^朱熹说道：大侠你也来抄书？}{/unticker work;walk 杂货铺;de1 {buy brush};de2 {cxt}}
+/nop ac {^朱熹说道：大侠你也来抄书？}{s;gotodie}
+/ac {^║│这是一包鞋油，看上去还能用十次。}{;}
+/ac {^你把鞋油用完了，随手扔到了一边。}{;}
+/var shoeshines 0
+/var cani 1
+/ac {^你身上带著下列这些东西(负重 %1%, 携带量 %2/%3 )：}{/math cani {%3-%2}}
+/al buyxieyou {fyz;sb;do w,s,e,s;i;de1 {buy 7 shoeshine;}}
+/ac {^你从杨永福那里买下了一支鞋油。}{}
+/al yzn {fyz;walk 北门}
+/al yzs {fyz;walk 南门}
+/al yze {fyz;walk 东门}
+/al yzw {fyz;walk 西门}
+/al cxyzn {
+    caxie wu;
+    de4 {caxie bing 1};
+    de8 {caxie bing 2};
+    /delay {12}{do s,caxie meipo};
+    /delay {16}{d s,caxie ouyang};
+    /delay {20}{d s,caxie li apo};
+    /delay {24}{do n,n,w,caxie nan xian};
+    /nop delay {21}{caxie qiandao npc};
+    /nop delay {24}{do e,e,caxie xiao er};
+}
+/al cxyzs {
+    caxie wu;
+    de4 {caxie bing 1};
+    de8 {caxie bing 2};
+    /delay {12}{do n,caxie liu};
+    /delay {15}{caxie liu 2};
+    /delay {18}{caxie liu 3};
+    /delay {21}{caxie liu 5};
+}
+/al cxyze {
+    caxie wu;
+    de4 {caxie bing 1};
+    de6 {caxie bing 2};
+    /delay {10}{do e,caxie tiao fu 1};
+    /delay {14}{caxie tiao fu 2};
+    /delay {17}{caxie tiao fu 3};
+    /delay {21}{do e,caxie hai};
+    /delay {24}{caxie xiao};
+}
+/al cxyzw {
+    caxie wu;
+    de4 {caxie bing 1};
+    de8 {caxie bing 2};
+    /delay {12}{do w,caxie boy};
+    /delay {15}{caxie boy 2};
+    /delay {18}{caxie boy 3};
+}
+/al cxfy {
+    caxie garrison;
+    de3 {caxie garrison 2};
+    de6 {caxie garrison 3};
+    de9 {caxie garrison 4};
+}
+/al cxfy4sw {
+    ffy;
+    /delay {1}{do d,s,s,s,s,w};
+    /delay {2}{caxie man 1};
+    /delay {5}{caxie man 2};
+    /delay {8}{caxie girl 1};
+    /delay {11}{caxie girl 2};
+    /delay {14}{caxie fang er};
+    /delay {17}{/showme cxfy4sw--finish};
+}
+/al cxfy2nwn {
+    d;ffy;
+    /delay {1}{do d,n,n,w,n};
+    /delay {2}{caxie kaoguan};
+    /delay {5}{caxie student 1};
+    /delay {8}{caxie student 2};
+    /delay {11}{caxie student 3};
+    /delay {14}{/showme cxfy2nwn--finish};
+}
+/al cxfyw {
+    d;ffy;
+    /delay {1}{do d,w,w,caxie song};
+    /delay {4}{do w,caxie fatman};
+    /delay {7}{do w,s,caxie xia zi};
+    /delay {10}{caxie da niu};
+    /delay {13}{do s,caxie huang mazi};
+    /delay {16}{do w,caxie fang};
+    /delay {19}{caxie leng};
+    /delay {22}{/showme cxfyw--finish};
+}
+/al cxfybj {
+    d;ffy;
+    /delay {1}{fy2bj};
+    /delay {2}{caxie meng};
+    /delay {6}{do e,n,caxie biaotou};
+    /delay {9}{caxie tangzi};
+    /delay {12}{caxie tangzi 2};
+    /delay {15}{do s,s,caxie biaotou};
+    /delay {18}{caxie tangzi};
+    /delay {21}{caxie tangzi 2};
+    /delay {24}{do n,e,caxie biaotou};
+    /delay {27}{caxie tangzi};
+    /delay {30}{caxie tangzi 2};
+    /delay {33}{do w,w,w,caxie tangzi};
+    /delay {37}{caxie biao shi};
+    /delay {40}{nw;caxie huoji};
+    /delay {43}{caxie jumper};
+    /delay {46}{caxie jumper 2};
+    /delay {49}{/showme cxfybj--finish};
+}
+/al cxfyall {d;ffy;
+    de1 fyw;
+    de2 {e;cxfy}; 
+    /delay {15}{ffy;fye};
+    /delay {16}{w;cxfy};
+    /delay {29} {ffy;fys};
+    /delay {30}{cxfy};
+    /delay {43}{ffy;fyn};
+    /delay {44}{s;cxfy};
+    /delay {57}{drop coin};
+    /delay {58}{cxfy4sw};
+    /delay {79}{cxfy2nwn};
+    /delay {94}{cxfyw};
+    /delay {118}{cxfybj};
+    /delay {169}{hpnt;};
+}
+/al cxyzall {
+    yzw;
+    /delay {2}{cxyzw};
+    /delay {24}{yze};
+    /delay {25}{cxyze};
+    /delay {53}{yzn};
+    /delay {54}{cxyzn};
+    /delay {82}{yzs};
+    /delay {83}{cxyzs};
+    /delay {111}{dd coin;/showme cxyzall--finish}
+}
+/al cx+ {
+/showme --cx+;
+   /ac {^%1%s= %2 %3,bing}{/showme ====%3====;caxie %3;};
+   /ac {^%1%s= %2 %3,%4,%5}{/showme ----sdfdsfsdf}
+}
+/al cx- {
+/unac {^  武将(Wu jiang)(LV7)};
+}
+/al cx {
+n;w;
+        caxie walker;
+        de2 {caxie li apo};
+        de4 {n;caxie ouyang};
+        de6 {n;caxie meipo};
+        de8 {w;caxie nan xian;caxie qiandao npc};
+        de10 {e;e;caxie xiao er;caxie kuang};
+        }
+/nop 115 168
+/al cx {buyxieyou;de2 {cxyzall};/delay {115}{cxfyall}}
+/al cxt {cx;/ticker {cx}{cx}{286}}
+/al cxt- {/unticker {cx}}
+/ac {^看来是拉杆(draw)拉晚了，白白的赔了一个鱼饵}{fish}
+/ac {^汉水南岸}{fish}
+/ac {^你的浮子猛然向下一窜}{draw diao gan}
+/ac {^你的浮子忽左忽右摇摆个不停。}{draw diao gan}
+/ac {^你钓到了一条鲫鱼}{drop jiyu}
+/ac {^你身上没有鱼饵了。}{s;buyyuer}
+/al buyyuer {fyz;w;s;e;s;buy 5000 yu er;do n,w,n,n,n,n,n,n,n,n;fish}
+/ac {^这里看不出有鱼的样子。}{buyyuer}
+/ac {^你顺势一拉杆}{de1 fish}
