--- a/demo.tt
+++ b/demo.tt
@@ -1,5 +1,5 @@
 #config {TINTIN CHAR} /
-/var myname stick
+/var myname demo 
 /var passwd Sea123
 /nop session $myname sh.fengyun.com 6666
 /nop session $myname 117.135.143.81 6666
@@ -8,3 +8,4 @@
 /read comm/login.sc
 /read comm/gag.sc
 /read comm/ntpot.sc
+/al cxt cxzzt;
