--- a/claw.tt
+++ b/claw.tt
@@ -34,7 +34,7 @@
 /var haspj 0
 /ac {^小小爪左手虚握，形成一团奇冷}{/var haspet 1;/var haspj 1}
 /ac {^但是被%1机灵地躲开了。}{/var haspj 1;/var haspet 1;de5 {/var haspj 0;pj;pjj};}
-/ac {^奇冷的寒气包围了}{/var haspj 1;/var haspet 1;luo;de4 luo;de4 pk;de5 {/var haspj 0};de5 pj;/showme ============ freeze ===========}
+/ac {^奇冷的寒气包围了}{/var haspj 1;/var haspet 1;kuang;de4 kuang;de4 pk;de5 {/var haspj 0};de5 pj;/showme ============ freeze ===========}
 /read comm/autorecover_hc.sc
 /var jqs_lost_limit 0.1
 /ac {^你的伤势好了一些}{stopk;de2 {hxx;cks};}
@@ -67,8 +67,11 @@
 /al noblade2 {/var blade2  0;/showme no blade2;}
 /ac {^你抽出一把明晃晃的圆月弯刀}{iblade}
 /ac {^你装备神之祝福宝剑作武器}{isword}
+/ac {^你装备神之祝福宝刀}{iblade}
+/ac {^  √神之祝福宝刀(zhufu blade)}{iblade}
 /ac {^你「唰」地一声抽出一把备用剑}{isword}
 /ac {^你放下手中的神之祝福宝剑}{nosword}
+/ac {^你放下手中的神之祝福宝刀}{noblade}
 /ac {^你装备%0棋子作武器}{ianqi}
 /ac {^你将仙人刺握在手中}{ianqi}
 /ac {^你放下手中的圆月弯刀}{noblade}
@@ -90,7 +93,7 @@
 /ac {^  √备用剑(sword)}{isword;/delay {0.2}{isword}}
 /al wifushou {/if {$hasfushou==0}{wi jade}}
 /al wihand {/if {$hand==0}{unwi all}}
-/al wiblade {wifushou;/if {$blade==0}{unwi piece;unwi needle;wi jade2}}
+/al wiblade {/if {$blade==0||$sword==1}{do unwield sword,wield zhufu blade}}
 /al wisword {/if {$sword==0}{do unwield all,wield zhufu sword,wield $seconw}}
 /al wis2 {
         /if {$blade2==1}{do unwield blade2,wield sword2}{
@@ -137,11 +140,12 @@
 /al slcx {set secon_perform shuanglengcanxia;wis2;/showme ====== 剑  slcx}
 /al yrcy {set secon_perform yirancangyun;wis2;/showme ====== 剑  *yrcy}
 /al yr {wisword;perform yirancangyun;/showme ======+ 剑  *yrcy}
-/al tryyr {/if {$yrcyok==1}{yr}{luo}}
+/al tryyr {/if {$yrcyok==1}{yr}{kuang}}
 /al po   {do unwield all,perform unarmed.polu,wield zhufu sword;slcx}
 /al po   {perform unarmed.polu}
 /al zm   {do unwield all,perform dodge.zhuiming,wield zhufu sword;slcx}
 /al luo {wisword;do enable sword shilin-jian,perform sword.luo,enable sword nine-moon-sword}
+/al kuang {wiblade;do enable blade kuangfeng-blade,perform blade.kuang,enable blade ittouryu,unwield blade,wield zhufu sword}
 /var zmok 0
 /al tryzm {/if {$zmok==1}{zm}}
 /ac {^你一声轻笑，身形展动}{/var zmok 0;/delay {300}{/var zmok 1}}
@@ -165,7 +169,8 @@
     /var npcbusy 6;
     /if {$fdok ==0}{hhh};
     pk;
-    luo;
+    /nop luo;
+    kuang;
 }
 /nop mihun busy
 /ac {^一时之间，}{pk}
