--- a/offical.tt
+++ b/offical.tt
@@ -7,5 +7,7 @@
 /session $myname fy.sysfon.com 6000
 /read comm/login.sc
 /read comm/gag.sc
-/read comm/ntpot_3.sc
+/nop read comm/ntpot_diaoyu.sc
+/nop read comm/ntpot_mine.sc
+/read comm/ntpot.sc
 /nop al cxt cxzzt;
